# numpy

./: .gitattributes  .gitignore  README.md  README_CN.md  merge_coverage.py  meson.options
.gitcode/pipline/: README.md  benchmark.sh  common.sh  container_setup.md  full.sh  full_ut.sh  incremental_coverage.sh  lint.sh  smoke_test.sh  wheel.sh
.github/workflows/: codeql.yml  compiler_sanitizers.yml  cygwin.yml  dependency-review.yml  emscripten.yml  linux-ppc64le.yml  linux.yml  linux_blas.yml  linux_qemu.yml  linux_simd.yml  macos.yml  mypy.yml  mypy_primer.yml  mypy_primer_comment.yml  scorecards.yml  stubtest.yml  wheels.yml  windows.yml
benchmarks/benchmarks/: bench_custom.py  bench_function_base.py  bench_ufunc_strides.py
doc/release/upcoming_changes/: 00000.new_feature.rst  00001.arm64_kunpeng_optimization.rst
doc/source/building/: fft_backend.rst  index.rst
doc/source/dev/: fft-backend.rst  index.rst
numpy/_core/: _methods.py  config.h.in  fromnumeric.py  function_base.py  meson.build
numpy/_core/code_generators/: generate_umath.py
numpy/_core/include/numpy/: _numpyconfig.h.in
numpy/_core/tests/: test_coverage_comprehensive.py  test_cpp_coverage.py  test_cpp_incremental_coverage.py  test_function_base.py  test_multiarray.py  test_simd_coverage.py  test_simd_incremental_coverage.py
numpy/fft/: __init__.py  __init__.pyi  _backend.py  _fft_backend.h  _kml_fft.py  _kml_fft_umath.cpp  _pocketfft.py  meson.build
numpy/fft/tests/: test_fft_backend.py
numpy/lib/: _histograms_impl.py  _nanfunctions_impl.py
numpy/lib/tests/: test_function_base.py  test_histograms.py  test_nanfunctions.py
numpy/linalg/tests/: test_linalg.py  test_linalg_coverage.py
numpy/random/: mtrand.pyx
numpy/random/include/: legacy-distributions.h
(+76 files in other folders)
